--- a/server/package.json
+++ b/server/package.json
@@ -15,9 +15,12 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "body-parser": "^1.20.2"
+    "dotenv": "^17.2.3",
+    "express": "^4.18.2",
+    "node-fetch": "^3.3.2",
+    "readline": "^1.3.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
