--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,7 @@
   "description": "AI Demo 小程序后端服务",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node index.js"
   },
   "keywords": [
     "express",
